# StudyTrekBot

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  catalog.py  catalog_sync.py  config.py  container.py  course_matcher.py  database.py  dialog_manager.py  llm_client.py  llm_profile_extractor.py  llm_track_builder.py  main.py  models.py  profile_extractor.py  renderer.py  run_bot.py  telegram_adapter.py  track_builder.py
data/: catalog_seed.json
docs/: architecture.md  catalog-schema.md  project-decisions.md  questionnaire.md  tech-stack.md  telegram-fastapi-mvp.md  track-generation.md
scripts/: __init__.py  sync_google_sheet_catalog.py
tests/: test_api.py  test_catalog_sync.py  test_course_matcher.py  test_dialog_manager.py  test_llm_profile_extractor.py  test_llm_track_builder.py  test_profile_extractor.py  test_telegram_adapter.py  test_track_builder.py
