[project]
name = "learning-track-bot"
version = "0.1.0"
description = "MVP Telegram/FastAPI bot for generating personalized learning tracks."
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.6,<4",
    "fastapi>=0.111,<1",
    "httpx>=0.27,<1",
    "pydantic-settings>=2.3,<3",
    "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
learning-track-bot = "app.run_bot:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
